--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             </intent-filter>
         </activity>
         <service android:name=".MyAlarmService" />
+
     </application>
+
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
 
 </manifest>
