--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <service android:name="com.example.app.MyAlarmService" />
         <service android:name="com.example.app.MeteoService" />
-        <service android:name="com.example.app.GpsLocalizationService" />
+        <service android:name=".LocalizationBoundService" />
 
         <activity
             android:name=".AlarmActivity"
