--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app"
+    package="com.example.umorning"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.app.MainActivity"
+            android:name="com.example.umorning.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +23,8 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.example.app.MyAlarmService" />
-        <service android:name="com.example.app.MeteoService" />
+        <service android:name="com.example.umorning.MyAlarmService" />
+        <service android:name="com.example.umorning.MeteoService" />
         <service android:name=".GpsLocalizationService" />
 
         <activity
