--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -30,14 +30,14 @@
         </activity>
 
         <service android:name=".AlarmService" />
-        <service android:name="com.example.umorning.GpsLocalizationService" />
+        <service android:name=".LocalizationService" />
 
         <activity
             android:name="com.example.umorning.AlarmActivity"
             android:label="@string/title_activity_prova" >
         </activity>
         <activity
-            android:name="com.example.umorning.AccountManagerActivity"
+            android:name=".EventbriteAccountManagerActivity"
             android:label="@string/title_activity_account_manager" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
