--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -29,15 +29,18 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".util.AlarmService" />
-        <service android:name=".util.LocalizationService" />
+        <service android:name=".AlarmService" />
+        <!--<service android:name="com.example.umorning.GpsLocalizationService" />-->
 
         <activity
             android:name="com.example.umorning.AlarmActivity"
             android:label="@string/title_activity_prova" >
         </activity>
         <activity
-            android:name=".AccountManagerActivity"
+            android:name="com.example.umorning.AddNewAlarm">
+        </activity>
+        <activity
+            android:name="com.example.umorning.AccountManagerActivity"
             android:label="@string/title_activity_account_manager" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
