--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- suppress AndroidDomInspection -->
 <!-- suppress AndroidDomInspection -->
-<!-- suppress AndroidDomInspection -->
+<!--suppress AndroidDomInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.umorning"
     android:versionCode="1"
@@ -21,7 +21,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name="com.example.umorning.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,17 +30,18 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.example.umorning.internal_services.AlarmService" />
+        <service android:name=".internal_services.AlarmService" />
         <service android:name="com.example.umorning.internal_services.GpsLocalizationService" />
 
         <activity
-            android:name="com.example.umorning.activities.AlarmRingActivity"
+            android:name=".activities.AlarmRingActivity"
             android:label="@string/title_activity_prova" >
         </activity>
-        <activity android:name="com.example.umorning.activities.AlarmAddNewActivity" >
+        <activity
+            android:name=".activities.AlarmAddNewActivity">
         </activity>
         <activity
-            android:name="com.example.umorning.activities.AccountManagerActivity"
+            android:name=".activities.AccountManagerActivity"
             android:label="@string/title_activity_account_manager" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -52,12 +53,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.umorning.activities.WebViewActivity"
+            android:name=".activities.WebViewActivity"
             android:label="@string/title_activity_web_view" >
-        </activity>
-        <activity
-            android:name="com.example.umorning.activities.FacebookLoginActivity"
-            android:label="@string/title_activity_facebook_login" >
         </activity>
     </application>
 
