--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -56,6 +56,11 @@
             android:name=".activities.WebViewActivity"
             android:label="@string/title_activity_web_view" >
         </activity>
+        <activity android:name="com.facebook.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            />
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id"/>
     </application>
 
     <uses-permission android:name="android.permission.VIBRATE" />
