--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- suppress AndroidDomInspection -->
 <!-- suppress AndroidDomInspection -->
-<!--suppress AndroidDomInspection -->
+<!-- suppress AndroidDomInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.umorning"
     android:versionCode="1"
@@ -21,7 +21,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.example.umorning.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,39 +30,45 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".internal_services.AlarmService" />
+        <service android:name="com.example.umorning.internal_services.AlarmService" />
         <service android:name="com.example.umorning.internal_services.GpsLocalizationService" />
 
         <activity
-            android:name=".activities.AlarmRingActivity"
+            android:name="com.example.umorning.activities.AlarmRingActivity"
             android:label="@string/title_activity_prova" >
         </activity>
-        <activity
-            android:name=".activities.AlarmAddNewActivity">
+        <activity android:name="com.example.umorning.activities.AlarmAddNewActivity" >
         </activity>
         <activity
-            android:name=".activities.AccountManagerActivity"
+            android:name="com.example.umorning.activities.AccountManagerActivity"
             android:label="@string/title_activity_account_manager" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data android:scheme="my.special.scheme" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.SettingsActivity" >
+        <activity android:name="com.example.umorning.activities.SettingsActivity" >
         </activity>
         <activity
-            android:name=".activities.WebViewActivity"
+            android:name="com.example.umorning.activities.WebViewActivity"
             android:label="@string/title_activity_web_view" >
         </activity>
-        <activity android:name="com.facebook.LoginActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            />
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/app_id"/>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity
+            android:name="com.example.umorning.activities.EventDetailsActivity"
+            android:label="@string/title_activity_event_details" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.VIBRATE" />
