--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:screenOrientation="portrait">
+        >
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -25,7 +25,9 @@
 
         <activity
             android:name="com.example.umorning.activities.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,12 +41,14 @@
         <activity
             android:name="com.example.umorning.activities.AlarmRingActivity"
             android:label="@string/title_activity_prova" >
+            android:screenOrientation="portrait"
         </activity>
         <activity android:name="com.example.umorning.activities.AlarmAddNewActivity" >
         </activity>
         <activity
             android:name="com.example.umorning.activities.AccountManagerActivity"
             android:label="@string/title_activity_account_manager" >
+            android:screenOrientation="portrait"
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -54,15 +58,19 @@
                 <data android:scheme="my.special.scheme" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.umorning.activities.SettingsActivity" >
+        <activity android:name="com.example.umorning.activities.SettingsActivity"
+            android:label="Settings"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.example.umorning.activities.WebViewActivity"
-            android:label="@string/title_activity_web_view" >
+            android:label="@string/title_activity_web_view"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.facebook.LoginActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -70,7 +78,8 @@
 
         <activity
             android:name="com.example.umorning.activities.EventDetailsActivity"
-            android:label="@string/title_activity_event_details" >
+            android:label="@string/title_activity_event_details"
+            android:screenOrientation="portrait">
         </activity>
 
         <meta-data android:name="com.google.android.maps.v2.API_KEY"
