--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -5,8 +5,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.umorning"
     android:versionCode="1"
-    android:versionName="1.0"
-    >
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -16,9 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        >
-
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -26,8 +23,7 @@
         <activity
             android:name="com.example.umorning.activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
-
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,9 +39,9 @@
             android:label="@string/title_activity_prova" >
             android:screenOrientation="portrait"
         </activity>
-        <activity android:name="com.example.umorning.activities.AlarmEditActivity"
-            android:screenOrientation="portrait">
-        </activity>
+        <activity
+            android:name="com.example.umorning.activities.AlarmEditActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.example.umorning.activities.AccountManagerActivity"
             android:label="@string/title_activity_account_manager" >
@@ -59,19 +55,18 @@
                 <data android:scheme="my.special.scheme" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.umorning.activities.SettingsActivity"
+        <activity
+            android:name="com.example.umorning.activities.SettingsActivity"
             android:label="Settings"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.example.umorning.activities.WebViewActivity"
             android:label="@string/title_activity_web_view"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.facebook.LoginActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -80,23 +75,28 @@
         <activity
             android:name="com.example.umorning.activities.EventDetailsActivity"
             android:label="@string/title_activity_event_details"
-            android:screenOrientation="portrait">
-        </activity>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.example.umorning.activities.AlarmDetailsActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.example.umorning.activities.UserSettingActivity"
+            android:screenOrientation="portrait" />
+
+        <receiver android:name="com.example.umorning.internal_services.AlarmBroadcastReceiver" />
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDj6lm3eLSuOhG4rLXL66WUBg7C7XEDYcA" />
+
+        <activity
+            android:name="com.example.umorning.activities.InfoActivity"
+            android:label="@string/title_activity_info" >
         </activity>
-
-        <receiver android:name="com.example.umorning.internal_services.AlarmBroadcastReceiver" >
-        </receiver>
-
-        <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDj6lm3eLSuOhG4rLXL66WUBg7C7XEDYcA"/>
     </application>
 
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -104,7 +104,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
 </manifest>
