--- a/App/build.gradle
+++ b/App/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:4.2.42'
     compile project(':libraries:facebook')
     compile files('C:/Users/Lorenzo/AndroidStudioProjects/uMorning/libraries/http-request-5.5.jar')
+    compile files('C:/Users/Lorenzo/AndroidStudioProjects/uMorning/libraries/gson-2.2.4.jar')
 }
