--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name="com.example.umorning.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -31,19 +31,20 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.example.umorning.internal_services.AlarmBroadcastReceiver" />
+        <service android:name=".internal_services.AlarmBroadcastReceiver" />
+        <!--suppress AndroidDomInspection -->
         <service android:name=".internal_services.GpsLocalization" />
 
         <activity
-            android:name="com.example.umorning.activities.AlarmRingActivity"
+            android:name=".activities.AlarmRingActivity"
             android:label="@string/title_activity_prova" >
             android:screenOrientation="portrait"
         </activity>
         <activity
-            android:name="com.example.umorning.activities.AlarmEditActivity"
+            android:name=".activities.AlarmEditActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.umorning.activities.AccountManagerActivity"
+            android:name=".activities.AccountManagerActivity"
             android:label="@string/title_activity_account_manager" >
             android:screenOrientation="portrait"
             <intent-filter>
@@ -56,11 +57,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.umorning.activities.SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:label="Settings"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.umorning.activities.WebViewActivity"
+            android:name=".activities.WebViewActivity"
             android:label="@string/title_activity_web_view"
             android:screenOrientation="portrait" />
         <activity
@@ -73,26 +74,28 @@
             android:value="@string/app_id" />
 
         <activity
-            android:name="com.example.umorning.activities.EventDetailsActivity"
+            android:name=".activities.EventDetailsActivity"
             android:label="@string/title_activity_event_details"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.umorning.activities.AlarmDetailsActivity"
+            android:name=".activities.AlarmDetailsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.umorning.activities.UserSettingActivity"
+            android:name=".activities.UserSettingActivity"
             android:screenOrientation="portrait" />
 
-        <receiver android:name="com.example.umorning.internal_services.AlarmBroadcastReceiver" />
+        <!--suppress AndroidDomInspection -->
+        <receiver android:name=".internal_services.AlarmBroadcastReceiver" />
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDj6lm3eLSuOhG4rLXL66WUBg7C7XEDYcA" />
 
         <activity
-            android:name="com.example.umorning.activities.InfoActivity"
+            android:name=".activities.InfoActivity"
             android:label="@string/title_activity_info" >
         </activity>
+
     </application>
 
     <uses-permission android:name="android.permission.VIBRATE" />
