--- a/App/build.gradle
+++ b/App/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.google.android.gms:play-services:4.2.42'
     compile project(':libraries:facebook')
-    compile files('C:/Users/Lorenzo/AndroidStudioProjects/uMorning/libraries/http-request-5.5.jar')
+    compile 'com.github.kevinsawicki:http-request:5.6'
     compile 'com.google.code.gson:gson:2.2.4'
 }
